--- a/frontend/angular-app/.gitignore
+++ b/frontend/angular-app/.gitignore
@@ -41,3 +41,15 @@ __screenshots__/
 # System files
 .DS_Store
 Thumbs.db
+# =========================
+# Python backend
+# =========================
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Virtual environments
+venv/
+.env/
+.env.*
